feature: add PngWriter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,16 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 project(ray_tracing LANGUAGES CUDA)
-add_executable(ray_tracing main.cu)
+
+find_package(PNG REQUIRED)
+# sudo apt install -y libpng-dev
+
+include_directories(include)
+
+set(EXEC_PROGRAM "ray_tracing")
+
+add_executable(${EXEC_PROGRAM}
+    main.cu
+    include/png_writer.h
+)
+
+target_link_libraries(${EXEC_PROGRAM} ${PNG_LIBRARY})
