feature: add base/Color

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ else ()
 endif ()
 
 add_executable(${EXEC_PROGRAM}
-        src/main.cu)
+        src/main.cu src/base/color.cu src/base/color.cuh)
 
 target_include_directories(${EXEC_PROGRAM} PRIVATE "src/base")
 target_link_libraries(${EXEC_PROGRAM} PRIVATE ${PNG_LIBRARY})
