refactor: rewrite base/Image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,9 @@ endif ()
 add_executable(${EXEC_PROGRAM}
         src/main.cu
         src/base/color.cuh
-        src/base/image.cu
         src/base/image.cuh
-        src/base/util.h)
+        src/base/util.h
+        )
 
 target_include_directories(${EXEC_PROGRAM} PRIVATE "src/base")
 target_link_libraries(${EXEC_PROGRAM} PRIVATE ${PNG_LIBRARY})
