--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ endif ()
 add_executable(${EXEC_PROGRAM}
         src/main.cu
         src/base/color.cuh
+        src/base/image.cu
         src/base/image.cuh
         src/base/util.h
         )
