feature: add Point3 and Vector3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,11 @@ add_executable(${EXEC_PROGRAM}
         src/base/image.cu
         src/base/image.cuh
         src/base/util.h
+        src/base/ray.cuh
+        src/base/vector3.cuh
+        src/base/vector3.cu
+        src/base/point3.cuh
+        src/base/point3.cu
         )
 
 target_include_directories(${EXEC_PROGRAM} PRIVATE "src/base")
