feature: implement Sphere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 
 set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 # required by CLion
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(cuda_ray_tracer LANGUAGES CUDA)
+project(cuda_ray_tracer LANGUAGES CUDA CXX)
 
 set(EXEC_PROGRAM "cudart")
 
@@ -26,7 +28,8 @@ add_executable(${EXEC_PROGRAM}
         src/base/ray.cuh
         src/base/vector3.cuh
         src/base/point3.cuh
-        )
+        src/base/shape.h
+        src/base/sphere.h)
 
 target_include_directories(${EXEC_PROGRAM} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
 target_link_libraries(${EXEC_PROGRAM} PRIVATE ${PNG_LIBRARY})
