CI: add cuda-build.yml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.18 FATAL_ERROR)
 
-set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
-# required by CLion
+if (NOT CMAKE_CUDA_COMPILER)
+    set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
+    # required by CLion
+endif ()
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(cuda_ray_tracer LANGUAGES CUDA CXX)
-
-set(EXEC_PROGRAM "cudart")
 
 find_package(PNG QUIET)
 if (PNG_FOUND)
@@ -18,6 +19,8 @@ else ()
     find_package(PNG)
     message(FATAL_ERROR "libpng-dev is required to build the project.\nPlease install libpng-dev.")
 endif ()
+
+set(EXEC_PROGRAM "cudart")
 
 add_executable(${EXEC_PROGRAM}
         src/main.cu
