--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,18 +24,21 @@ set(EXEC_PROGRAM "cudart")
 
 add_executable(${EXEC_PROGRAM}
         src/main.cu
-        src/base/util.h
+        src/util/constants.h
         src/base/vector3.h
         src/base/point.h
         src/base/ray.h
         src/base/color.h
-        src/base/image.cu
-        src/base/image.h
+        src/util/image.cu
+        src/util/image.h
         src/base/shape.h
         src/shapes/sphere.h
         src/base/world.h
         src/base/camera.h
-        src/base/material.h)
+        src/base/material.h
+        src/cameras/perspective_camera.h
+        src/base/integrator.h
+        src/integrators/path.h)
 
 target_include_directories(${EXEC_PROGRAM} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
 target_link_libraries(${EXEC_PROGRAM} PRIVATE ${PNG_LIBRARY})
